[workspace]
members = ["disarm64", "disarm64-cli", "disarm64_gen"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["kromych <kromych@users.noreply.github.com>"]
description = """
disarm64 provides a tool and a library for decoding ARM64 instructions (at least 250 MiB/sec
of the decoding speed is delivered on a laptop that is used for development). Here you will
also find a utility for generating disassembler/instruction decoder tables in Rust from
a JSON file. Besides that, can visualize the instruction decoding as a tree.
"""
documentation = "https://github.com/kromych/disarm64"
homepage = "https://github.com/kromych/disarm64"
repository = "https://github.com/kromych/disarm64"
keywords = ["aarch64", "arm64", "arm-v8", "disassembler", "reverse-engineering"]
categories = ["command-line-utilities", "development-tools", "embedded"]
license = "Unlicense OR MIT"
readme = "Readme.md"

# disarm64_defn is a separate crate published to crates.io. During development it
# is edited in the sibling checkout so schema changes and their tests land
# together; released builds still resolve the published version (a patch applies
# only to this workspace). Building from a lone disarm64 checkout therefore needs
# ../disarm64_defn present; CI checks it out alongside.
[patch.crates-io]
disarm64_defn = { path = "../disarm64_defn" }

[workspace.dependencies]
disarm64 = { path = "disarm64", version = "0.1.26" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
memmap2 = "0.9"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
