[package]
name = "disarm64-cli"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
disarm64 = { workspace = true }
disarm64_defn = "0.2.0"

anyhow = { workspace = true }
clap = { workspace = true }
clap-num = "1"
env_logger = { workspace = true }
goblin = { version = "0.10", features = ["elf64", "pe64", "mach64"] }
log = { workspace = true }
memmap2 = { workspace = true }

[[bin]]
name = "disarm64"
path = "src/main.rs"

[features]
full = ["disarm64/full"]
load_store = ["disarm64/load_store"]
exception = ["disarm64/exception"]
system = ["disarm64/system"]
default = ["full"]
