[package]
name = "disarm64"
version = "0.1.21"
edition = "2021"
authors = ["kromych <kromych@users.noreply.github.com>"]
description = """
disarm64 provides a tool and a library for decoding ARM64 instructions (at least 250 MiB/sec
of the decoding speed is delivered on a laptop that is used for development). Here you will
also find a utility for generating disassembler/instruction decoder tables in Rust from
a JSON file. Besides that, can visualize the instruction decoding as a tree.
"""
documentation = "https://github.com/kromych/disarm64"
homepage = "https://github.com/kromych/disarm64"
repository = "https://github.com/kromych/disarm64"
keywords = ["aarch64", "arm64", "arm-v8", "disassembler", "reverse-engineering"]
categories = ["command-line-utilities", "development-tools", "embedded"]
license = "Unlicense OR MIT"
readme = "../Readme.md"

[features]
full = []
load_store = []
exception = []
system = []
default = ["full"]

[dependencies]
disarm64_defn = "0.1.10"

bitfield-struct = "0.10"
bitflags = { version = "2.4", features = ["serde"] }
goblin = { version = "0.9", features = ["elf64", "pe64", "mach64"] }
proc-macro2 = { version = "1", default-features = false }
