[package]
name = "disarm64"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true

[features]
full = []
load_store = []
exception = []
system = []
default = ["full"]

[dependencies]
disarm64_defn = { version = "0.2.0", default-features = false }

bitfield-struct = "0.13"
