[package]
name = "disarm64_gen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"

disarm64_defn = "0.1.10"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
memmap2 = "0.9"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }

serde_json = "1.0"
