[package]
name = "disarm64_gen"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
disarm64_defn = "0.1.12"

anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
memmap2 = { workspace = true }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }

serde_json = "1.0"
