[package]
name = "gen_decoder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen_decoder"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bitfield-struct.workspace = true
bitflags.workspace = true
clap-num.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
serde.workspace = true
strum_macros.workspace = true
strum.workspace = true
