[package]
name = "disarm64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bitfield-struct.workspace = true
clap.workspace = true
clap-num.workspace = true
log.workspace = true
env_logger.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
