[package]
name = "gen_decoder"
edition = "2021"

[dependencies]
insn_def.workspace = true

anyhow.workspace = true
bitfield-struct.workspace = true
clap.workspace = true
clap-num.workspace = true
log.workspace = true
env_logger.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
