[package]
name = "gen_decoder"
edition = "2021"

[dependencies]
anyhow.workspace = true
bitfield-struct.workspace = true
bitflags.workspace = true
clap-num.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
serde.workspace = true
strum_macros.workspace = true
strum.workspace = true
