[package]
name = "gen_insn_dec"
edition = "2021"

[[bin]]
name = "gen_insn_dec"
path = "src/gen_insn_dec.rs"

[dependencies]
insn_def.workspace = true

anyhow.workspace = true
clap.workspace = true
clap-num.workspace = true
log.workspace = true
env_logger.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
